# webtax-agents

./: .env.example  .gitignore  pyproject.toml
agents/: accountant.py  base.py  client.py  tenant.py
orchestrator/: events.py  manifest.py  orchestrator.py
personas/accountants/: thorough_tom.yaml
personas/clients/: disorganized_diana.yaml  prompt_patricia.yaml
personas/tenants/: growing_firm_gary.yaml
reporter/: linear.py  reporter.py
scenarios/: client_self_signup.yaml  full_flow.yaml
scripts/: cleanup.py
utils/: fake_data.py  fake_documents.py  mailpit.py  naming.py
