[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webtax-agents"
version = "0.1.0"
description = "Autonomous persona agents for testing the Webtax platform"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.1.0",
    "langchain-anthropic>=0.3.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "faker>=24.0.0",
    "fpdf2>=2.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "playwright>=1.44.0",
]

[project.scripts]
run-scenario = "orchestrator.orchestrator:main"

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"
